fixed alignement issue

--- a/modules.less
+++ b/modules.less
@@ -2117,6 +2117,7 @@ a.cke_smile img {
 	}
 	.filled.small{
 		color: #666;
+		padding: 0;
 	}
 }
 
